Z-index header fluid nav animation fixed

--- a/source/sass/layout/_header.scss
+++ b/source/sass/layout/_header.scss
@@ -65,7 +65,7 @@
 	max-width: 1684px;
 	display: flex;
 	justify-content: space-between;
-
+	position: relative;
 	@media (max-width: 992px) {
 		justify-content: flex-start;
 	}
@@ -76,7 +76,7 @@
 	z-index: 10;
 	padding-top: 18px;
 	padding-bottom: 18px;
-	background-color: $brand-color;
+	background-color: ;
 	color: $milk-white;
 }
 
@@ -104,11 +104,11 @@
 
 	@media (max-width: 992px) {
 		bottom: 0;
-    left: 0;
+    		left: 0;
 		position: absolute;
-		z-index: 5;
-    width: 100%;
-		background-color: #0A3737;
+		z-index: -1;
+    		width: 100%;
+		background-color: $brand-color;
 		visibility: hidden;
 		opacity: 0;
 		transition: 0.6s;
